# sprs_suitesparse_cholmod

./: .gitmodules  Cargo.toml  LICENSE  README.md
src/: lib.rs
suitesparse-src/: Cargo.toml  build.rs
suitesparse_cholmod_sys/: Cargo.toml  README.md  build.rs
suitesparse_cholmod_sys/src/: lib.rs
